--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sebastian Medina | Portafolio de Desarrollador</title>
+  
   <style>
     :root {
       --primary: #02F6FA;
@@ -208,6 +209,7 @@
 </head>
 <body>
   <header>
+    
     <h1>Sebastian Medina</h1>
     <nav>
       <a href="#about">Sobre mí</a>
@@ -257,7 +259,7 @@
   <section id="projects">
     <h2>Proyectos Destacados</h2>
     <div class="projects-grid">
-      <div class="project-card">
+      <div class="project-card
         <img src="https://images.unsplash.com/photo-1526379095098-2e1c2abb5d32?auto=format&fit=crop&w=600&q=80" alt="Proyecto 1">
         <h3>Proyecto 1</h3>
         <p>Descripción breve del proyecto 1. Explica cómo utilizaste tus habilidades para resolver un problema y el impacto generado.</p>
